--- a/2_chassis_profile/1_ippool.yml
+++ b/2_chassis_profile/1_ippool.yml
@@ -1,14 +1,17 @@
 ClassId: ippool.Pool
 Description: ""
 Name: IMM-IMC-POOL
-Organization: LAB-RESOURCES
+Organization: IMM-LAB-RESOURCES
 IpV4Config:
   ClassId: ippool.IpV4Config
   Gateway: 172.20.70.1
   Netmask: 255.255.255.0
-  PrimaryDns: 172.20.70.60
-  SecondaryDns: 172.20.70.59
+  PrimaryDns: 172.20.10.60
+  SecondaryDns: 172.20.10.59
 IpV4Blocks:
 - ClassId: ippool.IpV4Block
   From: 172.20.70.100
   To: 172.20.70.109
+- ClassId: ippool.IpV4Block
+  From: 172.20.70.110
+  To: 172.20.70.119
