--- a/1_domain_profile/5_domain_profile.yaml
+++ b/1_domain_profile/5_domain_profile.yaml
@@ -1,12 +1,12 @@
 ClassId: fabric.SwitchClusterProfile
-Name: IMM-Domain-01
+Name: IMM-Domain-02
 Organization: IMM-Troubleshooting
 ---
 ClassId: fabric.SwitchProfile
-Name: IMM-Domain-01-A
-SwitchClusterProfile: MoRef[IMM-Troubleshooting\IMM-Domain-01]
+Name: IMM-Domain-02-A
+SwitchClusterProfile: MoRef[IMM-Troubleshooting\IMM-Domain-02]
 # Change to the serial of your Switch or comment out and assign manually through the UI (make sure to also comment out the deploy action)
-AssignedSwitch: MoRef[$filter:Serial eq 'FDO25170K09']
+AssignedSwitch: MoRef[$filter:Serial eq 'FDO23350SLK']
 # Action: Deploy
 PolicyBucket:
   - MoRef:fabric.EthNetworkPolicy[IMM-Troubleshooting\IMM-VLANS]
@@ -18,10 +18,10 @@ PolicyBucket:
   - MoRef:snmp.Policy[IMM-LAB-RESOURCES\IMM-SNMP]
 ---
 ClassId: fabric.SwitchProfile
-Name: IMM-Domain-01-B
-SwitchClusterProfile: MoRef[IMM-Troubleshooting\IMM-Domain-01]
+Name: IMM-Domain-02-B
+SwitchClusterProfile: MoRef[IMM-Troubleshooting\IMM-Domain-02]
 # Change to the serial of your Switch or comment out and assign manually through the UI (make sure to also comment out the deploy action)
-AssignedSwitch: MoRef[$filter:Serial eq 'FDO25170K04']
+AssignedSwitch: MoRef[$filter:Serial eq 'FDO25060CVP']
 # Action: Deploy
 PolicyBucket:
   - MoRef:fabric.EthNetworkPolicy[IMM-Troubleshooting\IMM-VLANS]
