--- a/3_server_profiles/FI-Attached/3_serverProfileTemplate.yaml
+++ b/3_server_profiles/FI-Attached/3_serverProfileTemplate.yaml
@@ -1,23 +1,23 @@
 ClassId: server.ProfileTemplate
 Name: IMM-RHEL
-Organization: LAB-RESOURCES
+Organization: IMM-LAB-RESOURCES
 #settings
 TargetPlatform: FIAttached
 UuidAddressType: POOL
-UuidPool: MoRef[LAB-RESOURCES\IMM-UUID]
+UuidPool: MoRef[IMM-LAB-RESOURCES\IMM-UUID]
 Type: instance
 PolicyBucket:
-  - MoRef:bios.Policy[LAB-RESOURCES\IMM-BIOS]
-  - MoRef:boot.PrecisionPolicy[LAB-RESOURCES\IMM-Boot]
-  - MoRef:ipmioverlan.Policy[LAB-RESOURCES\IMM-IPMI-off]
-  - MoRef:kvm.Policy[LAB-RESOURCES\IMM-TunneledKVM]
-  - MoRef:sol.Policy[LAB-RESOURCES\IMM-SOL]
-  - MoRef:storage.StoragePolicy[LAB-RESOURCES\IMM-M.2]
-  - MoRef:vnic.LanConnectivityPolicy[LAB-RESOURCES\IMM-LAN]
-  - MoRef:access.Policy[LAB-RESOURCES\IMM-IMC-INBAND]
-  - MoRef:power.Policy[LAB-RESOURCES\IMM-Power]
-  - MoRef:firmware.Policy[LAB-RESOURCES\IMM-Firmware]
-  - MoRef:thermal.Policy[LAB-RESOURCES\IMM-Thermal]
-  - MoRef:vmedia.Policy[LAB-RESOURCES\IMM-vMedia-Empty]
-  - MoRef:iam.EndPointUserPolicy[LAB-RESOURCES\IMM-LocalAdmin]
-  - MoRef:snmp.Policy[LAB-RESOURCES\IMM-SNMP]
+  - MoRef:bios.Policy[IMM-LAB-RESOURCES\IMM-BIOS]
+  - MoRef:boot.PrecisionPolicy[IMM-LAB-RESOURCES\IMM-Boot]
+  - MoRef:ipmioverlan.Policy[IMM-LAB-RESOURCES\IMM-IPMI-off]
+  - MoRef:kvm.Policy[IMM-LAB-RESOURCES\IMM-TunneledKVM]
+  - MoRef:sol.Policy[IMM-LAB-RESOURCES\IMM-SOL]
+  - MoRef:storage.StoragePolicy[IMM-LAB-RESOURCES\IMM-M.2]
+  - MoRef:vnic.LanConnectivityPolicy[IMM-LAB-RESOURCES\IMM-LAN]
+  - MoRef:access.Policy[IMM-LAB-RESOURCES\IMM-IMC-OOB]
+  - MoRef:power.Policy[IMM-LAB-RESOURCES\IMM-Power]
+  - MoRef:firmware.Policy[IMM-LAB-RESOURCES\IMM-Firmware]
+  - MoRef:thermal.Policy[IMM-LAB-RESOURCES\IMM-Thermal]
+  - MoRef:vmedia.Policy[IMM-LAB-RESOURCES\IMM-vMedia-Empty]
+  - MoRef:iam.EndPointUserPolicy[IMM-LAB-RESOURCES\IMM-LocalAdmin]
+  - MoRef:snmp.Policy[IMM-LAB-RESOURCES\IMM-SNMP]
