--- a/1_domain_profile/2_portpolicy.yml
+++ b/1_domain_profile/2_portpolicy.yml
@@ -1,12 +1,12 @@
 ClassId: fabric.PortPolicy
 Name: IMM-6465-ports
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
 DeviceModel: UCS-FI-6454
 ---
 ClassId: fabric.FlowControlPolicy
 Name: IMM-FlowControl
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
 PriorityFlowControlMode: auto
 ReceiveDirection: Disabled
@@ -14,7 +14,7 @@ SendDirection: Disabled
 ---
 ClassId: fabric.LinkControlPolicy
 Name: IMM-LinkControl
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
 UdldSettings:
   ClassId: fabric.UdldSettings
@@ -23,7 +23,7 @@ UdldSettings:
 ---
 ClassId: fabric.LinkAggregationPolicy
 Name: IMM-LinkAggr
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
 LacpRate: normal
 SuspendIndividual: false
@@ -32,7 +32,7 @@ SuspendIndividual: false
 # Manually delete the PortMode resource based on moid when you want to reverse back to Ethernet
 ClassId: fabric.PortMode
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 PortIdStart: 1
 PortIdEnd: 8
 SlotId: 1
@@ -42,7 +42,7 @@ SlotId: 1
 
 # ClassId: fabric.PortMode
 # #settings
-# PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+# PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 # CustomMode: BreakoutEthernet25G
 # PortIdStart: 49
 # PortIdEnd: 50
@@ -51,11 +51,11 @@ SlotId: 1
 ClassId: fabric.UplinkPcRole
 AdminSpeed: Auto
 EthNetworkGroupPolicy: []
-FlowControlPolicy: MoRef[IMM-LAB-RESOURCES\IMM-FlowControl]
-LinkAggregationPolicy: MoRef[IMM-LAB-RESOURCES\IMM-LinkAggr]
-LinkControlPolicy: MoRef[IMM-LAB-RESOURCES\IMM-LinkControl]
+FlowControlPolicy: MoRef[LAB-RESOURCES\IMM-FlowControl]
+LinkAggregationPolicy: MoRef[LAB-RESOURCES\IMM-LinkAggr]
+LinkControlPolicy: MoRef[LAB-RESOURCES\IMM-LinkControl]
 PcId: 100
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 Ports:
 - AggregatePortId: 0
   ClassId: fabric.PortIdentifier
@@ -68,31 +68,31 @@ Ports:
 # ---
 # USE ONLY WHEN DOING UPLINKS WITHOUT PORTCHANNELS - NOT BEST PRACTISE
 # ClassId: fabric.UplinkRole
-# PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+# PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 # #settings
 # SlotId: 1
 # PortId: 53
 # #EthNetworkGroupPolicy: [] #only needed when doing disjoint layer 2
-# FlowControlPolicy: MoRef[IMM-LAB-RESOURCES\IMM-FlowControl]
-# LinkControlPolicy: MoRef[IMM-LAB-RESOURCES\IMM-LinkControl]
+# FlowControlPolicy: MoRef[LAB-RESOURCES\IMM-FlowControl]
+# LinkControlPolicy: MoRef[LAB-RESOURCES\IMM-LinkControl]
 # Fec: Auto
 # AdminSpeed: Auto
 # ---
 # USE ONLY WHEN DOING UPLINKS WITHOUT PORTCHANNELS - NOT BEST PRACTISE
 # ClassId: fabric.UplinkRole
 # #settings
-# PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+# PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 # SlotId: 1
 # PortId: 54
 # #EthNetworkGroupPolicy: [] #only needed when doing disjoint layer 2
-# FlowControlPolicy: MoRef[IMM-LAB-RESOURCES\IMM-FlowControl]
-# LinkControlPolicy: MoRef[IMM-LAB-RESOURCES\IMM-LinkControl]
+# FlowControlPolicy: MoRef[LAB-RESOURCES\IMM-FlowControl]
+# LinkControlPolicy: MoRef[LAB-RESOURCES\IMM-LinkControl]
 # Fec: Auto
 # AdminSpeed: Auto
 ---
 ClassId: fabric.ServerRole
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 AutoNegotiationDisabled: false
 Fec: Auto
 PortId: 9
@@ -100,7 +100,7 @@ SlotId: 1
 ---
 ClassId: fabric.ServerRole
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 AutoNegotiationDisabled: false
 Fec: Auto
 PortId: 10
@@ -108,7 +108,7 @@ SlotId: 1
 ---
 ClassId: fabric.ServerRole
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 AutoNegotiationDisabled: false
 Fec: Auto
 PortId: 11
@@ -116,7 +116,7 @@ SlotId: 1
 ---
 ClassId: fabric.ServerRole
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 AutoNegotiationDisabled: false
 Fec: Auto
 PortId: 12
@@ -124,7 +124,7 @@ SlotId: 1
 ---
 ClassId: fabric.ServerRole
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 AutoNegotiationDisabled: false
 Fec: Auto
 PortId: 13
@@ -132,7 +132,7 @@ SlotId: 1
 ---
 ClassId: fabric.ServerRole
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 AutoNegotiationDisabled: false
 Fec: Auto
 PortId: 14
@@ -140,7 +140,7 @@ SlotId: 1
 ---
 ClassId: fabric.ServerRole
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 AutoNegotiationDisabled: false
 Fec: Auto
 PortId: 15
@@ -148,7 +148,7 @@ SlotId: 1
 ---
 ClassId: fabric.ServerRole
 #settings
-PortPolicy: MoRef[IMM-LAB-RESOURCES\IMM-6465-ports]
+PortPolicy: MoRef[LAB-RESOURCES\IMM-6465-ports]
 AutoNegotiationDisabled: false
 Fec: Auto
 PortId: 16
