--- a/1_domain_profile/3_switchpolicies.yml
+++ b/1_domain_profile/3_switchpolicies.yml
@@ -1,7 +1,7 @@
 ---
 ClassId: ntp.Policy
 Name: IMM-NTP
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
 Enabled: true
 NtpServers:
@@ -10,14 +10,14 @@ Timezone: America/New_York
 ---
 ClassId: networkconfig.Policy
 Name: IMM-DNS
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
 PreferredIpv4dnsServer: 172.20.10.60
 AlternateIpv4dnsServer: 172.20.10.59
 ---
 ClassId: fabric.SwitchControlPolicy
 Name: IMM-SwitchControl
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
 EthernetSwitchingMode: end-host
 FabricPcVhbaReset: Enabled
@@ -35,7 +35,7 @@ VlanPortOptimizationEnabled: false
 ---
 ClassId: snmp.Policy
 Name: IMM-SNMP
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
 CommunityAccess: Disabled
 AccessCommunityString: ""
@@ -52,5 +52,5 @@ V3Enabled: true
 ---
 ClassId: fabric.SystemQosPolicy
 Name: IMM-QoS
-Organization: IMM-LAB-RESOURCES
+Organization: LAB-RESOURCES
 #settings
